# lcsh-legacy

./: CMakeLists.txt  README.md
cmake/: cmake_symlink.cmake
src/: main.c
